@@ -1,15 +1,15 @@
 Package: forecast
+Version: 3.26
+Date: 2012-10-??
 Title: Forecasting functions for time series and linear models
 Description: Methods and tools for displaying and analysing
-	univariate time series forecasts including exponential smoothing
-	via state space models and automatic ARIMA modelling.
-Version: 3.26
-Date: 2012-09-11
-Depends: R (>= 2.14.0), graphics, stats, parallel, tseries, fracdiff, zoo, Rcpp (>= 0.9.10), RcppArmadillo (>= 0.2.35), colorspace, nnet
+             univariate time series forecasts including exponential smoothing
+             via state space models and automatic ARIMA modelling.
+Depends: R (>= 2.14.0), graphics, stats, parallel, tseries, fracdiff, zoo, Rcpp (>= 0.9.10), RcppArmadillo (>= 0.2.35), colorspace, nnet, caret
 LinkingTo: Rcpp, RcppArmadillo
 LazyData: yes
 ByteCompile: TRUE
-Author: Rob J Hyndman <Rob.Hyndman@monash.edu> with contributions from Slava Razbash and Drew Schmidt
+Author: Rob J Hyndman <Rob.Hyndman@monash.edu> with contributions from Slava Razbash, Drew Schmidt and Zhenyu Zhou
 Maintainer: Rob J Hyndman <Rob.Hyndman@monash.edu>
 License: GPL (>= 2)
 URL: http://robjhyndman.com/software/forecast/
