@@ -11,7 +11,7 @@
 \item{data}{A numeric vector, ts object, matrix or data frame. It is intended that the time series data is univariate, otherwise treated the same as ts().}
 \item{seasonal.periods}{A vector of the seasonal periods of the msts.}
 \item{ts.frequency}{The seasonal periods that should be used as frequency of the underlying ts object. The default value is \code{max(seasonal.periods)}.}
-\item{...}{Arguements to be passed to the underlying call to \code{ts()}. For example \code{start=c(1987,5)}.}
+\item{...}{Arguments to be passed to the underlying call to \code{ts()}. For example \code{start=c(1987,5)}.}
 }
 
 \value{An object of class \code{c("msts", "ts")}.}
